fixed calculator option handling, added code for c desk half days

--- a/ssiCalculator.css
+++ b/ssiCalculator.css
@@ -95,6 +95,9 @@ h1 {
 .cDeskHoliday {
 	background-color:blue;
 }
+.cDeskHalfHoliday {
+	background-color:green;
+}
 .recessDay.cDeskHoliday {
 	background-color:purple;
 }
